[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/level/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/entity/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/entity/player/Movement.gd" type="Script" id=3]
[ext_resource path="res://scene/Level.gd" type="Script" id=4]
[ext_resource path="res://scene/level/Boundary.tscn" type="PackedScene" id=5]

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Boundary" parent="." instance=ExtResource( 5 )]
position = Vector2( 0.839233, 0.839233 )

[node name="Background" parent="." instance=ExtResource( 1 )]
z_index = -4096

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 36.3647, 552.945 )
scale = Vector2( 4, 4 )
script = ExtResource( 3 )

[node name="Deco1" type="Sprite" parent="."]
z_index = -64

[node name="Deco2" type="Sprite" parent="."]
z_index = -64

[node name="Deco3" type="Sprite" parent="."]
z_index = -64
